# libgtextutils

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  THANKS  aclocal.m4  configure.ac  gtextutils-0.1.pc.in  gtextutils-0.2.pc.in  gtextutils-0.4.pc.in  gtextutils.pc.in
m4/: Makefile.am
src/: Makefile.am
src/gtextutils/: Makefile.am  bpo_base.cpp  bpo_base.h  bpo_interval_file.cpp  bpo_interval_file.h  bpo_io.cpp  bpo_io.h  container_join.h  exit_manip.h  inbuf1.hpp  natsort.h  outbuf3.hpp  pipe_fitter.c  pipe_fitter.h  print_utils.h  stream_wrapper.cpp  stream_wrapper.h  string_tokenize.h  text_line_reader.cpp  text_line_reader.h  tuple_parser.h
tests/: Makefile.am  test_container_join.cpp  test_fd_inbuf.cpp  test_fd_outbuf.cpp  test_in_out_buf.cpp  test_input_stream_wrapper.cpp  test_natural_sort.cpp  test_pipe_fitter.c  test_string_tokenize.cpp  test_text_reader.cpp  test_text_reader_unget.cpp  test_tuple_parser.cpp  test_tuple_parser_file.cpp  tests_assertion.h
