# Copyright (C) 2008 Assaf Gordon <gordon@cshl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


lib_LIBRARIES = libgtextutils.a

libgtextutils_a_SOURCES = stream_wrapper.cpp stream_wrapper.h \
		          text_line_reader.cpp text_line_reader.h \
			  print_utils.h

libgtextutils_a_includedir = $(includedir)/gtextutils-0.1/gtextutils

libgtextutils_a_include_HEADERS = print_utils.h \
		  text_line_reader.h \
		  stream_wrapper.h

#EXAMPLE_RELEASE=0:0:1
#EXAMPLE_LIBRARY_VERSION=0:0:0
#libgtextutils_a_LDFLAGS= -version-info $(EXAMPLE_LIBRARY_VERSION) -release $(EXAMPLE_RELEASE)
